--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,8 @@ scikit-learn==1.3.2
 joblib==1.3.2
 python-dotenv==1.0.0
 pydantic-settings==2.11.0
+pytest>=8.2,<9.0
+pytest-cov>=5.0,<6
+httpx<0.28
 
 -e ./auth_shared
